# app_station

seetopia/: .pre-commit-config.yaml  README.rst  pyproject.toml
seetopia/docs/: requirements.txt
seetopia/docs/source/: conf.py  index.rst  modules.rst  readme.rst  src.rst  src.ui.rst  src.ui.screens.rst
seetopia/outputs/2021-04-13/13-32-07/.hydra/: config.yaml
seetopia/outputs/2021-04-13/14-34-54/.hydra/: config.yaml
seetopia/outputs/2021-04-13/14-37-31/.hydra/: config.yaml
seetopia/outputs/2021-04-13/14-44-01/.hydra/: config.yaml
seetopia/outputs/2021-04-14/11-28-51/.hydra/: config.yaml
seetopia/outputs/2021-04-14/11-53-51/.hydra/: config.yaml
seetopia/outputs/2021-04-14/12-06-39/.hydra/: config.yaml
seetopia/outputs/2021-04-14/12-10-20/.hydra/: config.yaml
seetopia/outputs/2021-04-14/12-11-55/.hydra/: config.yaml
seetopia/outputs/2021-04-14/12-12-27/.hydra/: config.yaml
seetopia/outputs/2021-04-14/12-15-09/.hydra/: hydra.yaml
seetopia/outputs/2021-04-14/13-10-42/.hydra/: config.yaml
seetopia/resources/nn/mobilenet-ssd/: mobilenet-ssd.json
seetopia/src/: __init__.py  qa_app_demo.py
seetopia/src/conf/: config.py
seetopia/src/conf/conf/: configs.yaml
seetopia/src/conf/conf/cv/: cust001.yaml  (+1 more)
seetopia/src/core/: oak_pipeline.py
seetopia/src/ui/: config.py
seetopia/src/ui/screens/: dashboard.py  main_window.py  search_page.py
seetopia/src/ui/widgets/: barcode_popup.py  custom_input_field.py  custom_snack_bar.py
seetopia/src/utils/: main.kv  main_pages.kv  multipage.kv  utils.py
seetopia/tests/measurement/: measurement_test.py
(+39 files in other folders)
