[tool.poetry]
name = "objectmeasurement"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
hydra-core = "^1.0.6"
depthai = "^2.2.1"
opencv-python = "^4.5.1"
pyzbar = "^0.1.8"
uvicorn = "^0.13.4"
kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
setuptools = "^56.2.0"
wheel = "^0.36.2"
Kivy = "^2.0.0"
Sphinx = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.6"
flake8 = "^3.9.0"
coverage = "^5.5"
black = "^20.8b1"
sphinx-rtd-theme = "^0.5.2"
pre-commit = "^2.12.0"
hydra-core = "^1.0.6"
importlib-resources = "^5.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
